force-app/main/default/objects/Custom_Test_Object2__c/Custom_Test_Object2__c.object-meta.xml
<CustomObject>
    <label>Custom Test Object 2</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Sample Exchange Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Test Objects 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>